# sigrok-logicanalyzer-mcp

./: .gitignore  DESIGN.md  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-25-decode-efficiency-design.md  2026-02-25-protocol-cicd-plan.md  2026-02-25-protocol-support-cicd-design.md
scripts/: decode_examples.sh
src/sigrok_logic_analyzer_mcp/: __main__.py  capture_store.py  formatters.py  server.py  sigrok_cli.py  sigrok_native.py
src/sigrok_logicanalyzer_mcp/: __init__.py  __main__.py  capture_store.py  formatters.py  server.py  sigrok_cli.py
src/sigrok_mcp/: __main__.py  capture_store.py  server.py
tests/: conftest.py  test_capture_store.py  test_formatters.py  test_integration.py  test_sigrok_cli.py  test_sigrok_native.py
tests/fixtures/decoded/: am2301_am230x.txt  cmd23_cmd18_sdcard.txt  dcf77_120s_dcf77.txt  ds28ea00_device.txt  ds28ea00_onewire_link.txt  ds28ea00_onewire_network.txt  hantek_6022be_i2c.txt  isp_atmega88_avr_isp.txt  kc85_z80.txt  lan8720a_mdio.txt  mcp2515dm_can.txt  mtk3339_uart.txt  mx25l1605d_spi.txt  olimex_stm32_usb_packet.txt  olimex_stm32_usb_signalling.txt  trace_example_arm_itm.txt
